src/objects/Win_Region__c.object
<CustomObject>
    <description>Region object contains the details about a region</description>
    <fields>
        <fullName>Brand_ID__c</fullName>
        <description>Brand Id</description>
        <label>Brand ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_ID__c</fullName>
        <description>Category Id</description>
        <label>Category ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_ID__c</fullName>
        <description>Country ID</description>
        <label>Country ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <description>Region Id</description>
        <externalId>true</externalId>
        <label>Region ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Time Zone</description>
        <label>Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Wings Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Brand_ID__c</columns>
        <columns>Category_ID__c</columns>
        <columns>Country_ID__c</columns>
        <columns>Region_ID__c</columns>
        <columns>Time_Zone__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wings Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>